[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-trait = "0.1.80"
env_logger = "0.11.3"
log = "0.4.21"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v7"] }
